# physiognomy_classification

./: .gitignore  pyproject.toml
physiognomy_classification/: config.py  data.py  model_converison.py  train.py
physiognomy_classification/conf/: config.yaml
physiognomy_classification/conf/scheduler/: one_cycle.yaml  reduce_plateau.yaml
physiognomy_classification/models/: model.py  shell.py
physiognomy_classification/pre-processing/: extract_faces_from_frames.py  extract_frames_from_videos.py
tests/: datamodule_test.py  onnx_tests.py
